new updated website

--- a/templates/work.html
+++ b/templates/work.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Work</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -64,18 +64,14 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
+          <img src="./static/assets/images/driverdrowsiness.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">001 : Fringilla sit amet</h1>
+              <h1 class="h2">001 : Driver Drowsiness Detection</h1>
             </div>
-            <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales
-              arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
-
-            <blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-              <small class="pull-right">Irina Martin</small>
-            </blockquote>
+            <p>A python-based program that can detect driver who is in drowsy state and giving them an alert sound to warn them about their condition
+            Driver will be indicated as drowsy if the driver eyes is closed more than 2 seconds. The alert text will be pop out and the alert sound will beep
+            The result of detecting a drowsy can be seen at image below.</p>
           </div>
         </div>
 
@@ -84,18 +80,18 @@
         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <img src="./static/assets/images/testopen.png" class="img-responsive" alt="">
+              <p>Not Drowsy</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-              <p>Menphis skyline</p>
+              <img src="./static/assets/images/testclose.png" class="img-responsive" alt="">
+              <p>Drowsy</p>
             </div>
           </div>
         </div>
 
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt="">
+          <img src="./static/assets/images/driverdrowsiness.jpg" class="img-responsive" alt="">
         </div>
 
       </div>
@@ -121,7 +117,7 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
