--- a/templates/works.html
+++ b/templates/works.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Works</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -58,8 +58,8 @@
         <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
           <div class="text-center">
             <h1 class="h2">02 : Works</h1>
-            <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales
-              arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+            <p>Welcome to my works page!
+            In this page, you will be shown about projects that i have worked on while in college or outside college</p>
           </div>
         </div>
 
@@ -73,12 +73,12 @@
                   <div class="col-sm-4">
 
                     <a href="./work.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <img src="./static/assets/images/driverdrowsiness.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/006</h4>
-                      <h3>Fringilla sit amet</h3>
-                      <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                      <h3>Driver Drowsiness Detection</h3>
+                      <p>A python-based program that can detect driver who is in drowsy state and giving them an alert sound to warn them about their condition</p>
                       <a href="./work.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -88,8 +88,8 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>Upcoming Project</h3>
+                      <p>---</p>
                       <a href="./work.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -99,8 +99,8 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
-                      <h3>Vivamus vestibulum</h3>
-                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                      <h3>Upcoming Project</h3>
+                      <p>---</p>
                       <a href="./work.html" title="" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -117,8 +117,8 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <h3>Upcoming Project</h3>
+                      <p>---</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -128,8 +128,8 @@
                     </a>
                     <div class="card-container">
                       <h4>005/006</h4>
-                      <h3>Fringilla sit amet</h3>
-                      <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                      <h3>Upcoming Project</h3>
+                      <p>---</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -140,8 +140,8 @@
                     </a>
                     <div class="card-container">
                       <h4>006/006</h4>
-                      <h3>Vivamus vestibulum</h3>
-                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                      <h3>Upcoming Project</h3>
+                      <p>---</p>
                       <a href="./work.html" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -188,7 +188,7 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
