--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>About Me</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -63,22 +63,33 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius.
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras
-                    ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>SUMMARY</h3>
+                  <p>Recent Graduate with a Computer Engineering Degree and some relevant experience in the field.</p>
+                  <h3>Education</h3>
+                  <p><b>Universitas Multimedia Nusantara, 2017-2021</b>
+                  Bachelor of Engineering in Computer Engineering
+                  </p>
+                  <h3>Technical Skills</h3>
                   <p>
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis
-                    blandit. Cras ultrices hendrerit nisl.</p>
+                    <b>Programming Languages</b>
+                    <ul>
+                      <li>Python (Pandas, Tensorflow, Selenium, Beautiful Soup, Matplotlib, Dlib, cv2, scikit-learn)</li>
+                      <li>C/C++ (Embedded System, Arduino)</li>
+                      <li>Java (Android Apps, Jackson, JSoup)</li>
+                      <li>SQL (MySQL)</li>
+                    </ul>
+                    <b>Experienced in using</b>
+                    <ul>
+                      <li>Jupyter Notebook</li>
+                      <li>Android Studio</li>
+                      <li>Visual Studio Code</li>
+                      <li>Arduino IDE</li>
+                      <li>IntelliJ IDEA</li>
+                    </ul>
+                  </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                  <img src="./static/assets/images/FilipusSamuel.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
@@ -109,7 +120,7 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
