--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Contact Me</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -82,29 +82,29 @@
                         <span class="fa-icon">
                           <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
-                        + 33 9 07 45 12 65
+                        +6287876721081
                       </li>
                       <li>
                         <span class="fa-icon">
                           <i class="fa fa-at" aria-hidden="true"></i>
                         </span>
-                        e-mail@mail.io
+                        filipussamuel31@gmail.com
                       </li>
                       <li>
                         <span class="fa-icon">
                           <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                         </span>
-                        42 rue Moulbert 75016 Paris
+                        M-Town Signature, Gading Serpong
                       </li>
                     </ul>
                     <h3>Follow me on social networks</h3>
                     <a href="http://www.facebook.com" title="" class="fa-icon">
                       <i class="fa fa-facebook"></i>
                     </a>
-                    <a href="http://www.twitter.com" title="" class="fa-icon">
-                      <i class="fa fa-twitter"></i>
+                    <a href="https://www.instagram.com/filipus_/" title="" class="fa-icon">
+                      <i class="fa fa-instagram"></i>
                     </a>
-                    <a href="http://www.linkedin.com" title="" class="fa-icon">
+                    <a href="https://www.linkedin.com/in/filipus-samuel" title="" class="fa-icon">
                       <i class="fa fa-linkedin"></i>
                     </a>
 
@@ -139,7 +139,7 @@
     });
   </script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
 
 <script>
   (function (i, s, o, g, r, a, m) {
