--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Home</title>
 
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -52,7 +52,7 @@
   </header>
   <!-- Add your site or app content here -->
   <div class="hero-full-container background-image-container white-text-container"
-    style="background-image: url('./static/assets/images/space.jpg')">
+    style="background-image: url('./static/assets/images/dots.png')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -61,8 +61,9 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Filipus Samuel</span>
-                  <span>Python Programmer</span>
-                  <span>Building a Portfolio</span>
+                  <span>I'm Grace Virna Christilia boyfriend</span>
+                  <span>Soon to be her husband</span>
+                  <span>Pray for us okay! Thank You!</span>
                 </span>
                 <span id="typed"></span>
               </h1>
